# grokvoicebot

./: .env.example  README.md  pyproject.toml  requirements.txt
src/grokvoicebot/: __init__.py  __main__.py  api.py  assistant.py  config.py  db.py  grok_voice_agent.py  schemas.py  services.py
src/grokvoicebot/static/: index.html
